# lily-post

./: .env  .gitignore  Cargo.toml  lily.sh  run.sh  sankar.cql
lily-test/: Cargo.toml
lily-test/src/: main.rs
lily-utils/: Cargo.toml
lily-utils/src/: encoder.rs  lib.rs  unique.rs
mongo-db/: Cargo.toml
mongo-db/src/: blog.rs  blog_node.rs  book.rs  book_node.rs  booknode.rs  error.rs  lib.rs  model.rs  route.rs  user.rs
mongo-db/src/user/: mod.rs  signup.rs
pg-db/: Cargo.toml
pg-db/docs/: neo4j  postgres_db.md
pg-db/src/: connection.rs  error.rs  lib.rs  query.rs  route.rs  user.rs
pg-db/src/auth/: mod.rs
pg-db/src/blog/: controller.rs  model.rs
pg-db/src/blognode/: controller.rs  create.rs  delete.rs  merge.rs  mod.rs  model.rs  read.rs
pg-db/src/book/: controller.rs  create.rs  mod.rs  model.rs
pg-db/src/booknode/: append.rs  controller.rs  create.rs  delete.rs  merge.rs  mod.rs  model.rs  read.rs  update.rs
pg-db/src/user/: signup.rs
scripts/scylla_db/: create_keyspace.sh  install_scylladb.sh  start_server.sh
scylla-db/: Cargo.toml
scylla-db/src/: db.rs  error.rs  lib.rs  query.rs
scylla-db/src/blog/: create.rs  delete.rs  image.rs  mod.rs  update.rs
scylla-db/src/blognode/: create.rs  delete.rs  deleteAndUpdate.rs  image.rs  merge.rs  update.rs
scylla-db/src/book/: create.rs  delete.rs  image.rs  mod.rs  update.rs
scylla-db/src/booknode/: create.rs  delete.rs  deleteAndUpdate.rs  image.rs  merge.rs  pullnode.rs  update.rs
scylla-db/src/client/: mod.rs
scylla-db/src/settings/: mod.rs
scylla-db/src/table/: Readme.md
scylla-db/src/user/: category.rs  followers.rs  queries.rs  signup.rs
scylla-db/src/utils/: query.rs
src/: batch.rs  builder.rs  cli.rs  db.rs  error.rs  main.rs  query.rs  route.rs
src/auth/: mod.rs
src/blog/: create.rs  delete.rs  image.rs  mod.rs  segment.rs  update.rs
src/blognode/: create.rs  delete.rs  deleteAndUpdate.rs  image.rs  merge.rs  mod.rs  update.rs
src/book/: create.rs  delete.rs  image.rs  mod.rs  segment.rs  update.rs
src/booknode/: create.rs  delete.rs  deleteAndUpdate.rs  image.rs  merge.rs  mod.rs  pullnode.rs  update.rs
src/client/: mod.rs
src/guides/: all.cql  blog.cql  book.cql  categories.cql  comments.cql  query.md  session.cql  userbooksettings.cql
src/helpers/: error.rs
src/middleware/: authentication.rs  mod.rs
src/request/: mod.rs
src/settings/: mod.rs
src/user/: category.rs  delete.rs  mod.rs  signup.rs  update.rs
src/utils/: mod.rs
