[package]
name = "lily_post"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2018"

[workspace]

members = [
	"lily-utils",
	"lily-test"
]

[dependencies]

#actix
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-multipart = "0.6.0"
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
actix-redis = "0.12.0"

#serializer
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
jsonwebtoken = "7"

#db
scylla = "0.3.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
config = "0.13.1"

futures = "0.3.6"
uuid = { version = "0.8", features = ["serde", "v1", "v4"] }
bigdecimal = "0.2.0"
num-bigint = "0.3"
# tracing = "0.1.25"
# tracing-subscriber = "0.2.16"
anyhow = "1.0.33"
async-std = "1.9.0"
validator = { version = "0.12", features = ["derive"] }
derive_more = "0.99.11"
chrono = "0.4.19"
sanitize-filename = "0.3.0"
rust-argon2 = "0.8.3"
time = "0.3.20"
regex = "1.6.0"
lazy_static = "1.4.0"

#logger
env_logger = "0.8"
log = "0.4"

# search
meilisearch-sdk = "0.23.0"

lily-utils = { path = "./lily-utils"}
tantivy = "0.18.0"
tempfile = "3.3.0"