[package]
name = "lily_post"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2021"

[workspace]

members = [
	"lily-utils",
	"lily-test",
	"scylla-db",
	"mongo-db",
]

[dependencies]

#actix
actix-web 			= "4.3.1"
actix-cors 			= "0.6.4"
actix-service 		= "2.0.2"
actix-multipart 	= "0.6.0"
actix-session 		= { version = "0.7.2", features = ["redis-actor-session"] }
actix-redis 		= "0.12.0"
anyhow 				= "1.0.33"
env_logger 			= "0.8"

lily-utils 			= { path = "./lily-utils"}
mongo_db = { path = "./mongo-db" }
scylla_db = { path = "./scylla-db" }

