[package]
name = "lily_post"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2021"

[workspace]

members = [
	"lily-utils",
	"lily-test",
	"scylla-db",
	"mongo-db",
	"pg-db"
]

[dependencies]

# actix
actix-web 			= "4.3.1"
actix-cors 			= "0.6.4"
actix-service 		= "2.0.2"
actix-multipart 	= "0.6.0"
actix-session 		= { version = "0.7.2", features = ["redis-actor-session"] }
actix-redis 		= "0.12.0"

anyhow 				= "1.0.33"
env_logger 			= "0.8"
log 				= "0.4.0"
clap = { version = "4.3.23" , features = [ "derive", "env" ]}
time 				= "0.3.20"


# db
# mongo_db = { path = "./mongo-db" }
# scylla_db = { path = "./scylla-db" }
pg_db = { path = "./pg-db" }

# utils

lily-utils 			= { path = "./lily-utils"}
lazy_static = "1.4.0"
