[package]
name = "lily-test"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
jsonwebtoken = "7"
serde = "1.0.117"
serde_json = "1.0.59"