[package]
name = "mongo_db"
version = "0.1.0"
authors = ["Sankar boro <sankar.boro@yahoo.com>"]
edition = "2021"

[dependencies]
actix-web 			= "4.3.1"

lily-utils = { path = "../lily-utils" }
validator = { version = "0.12", features = ["derive"] }
regex = "1.6.0"
serde 				= { version = "1.0.132", features = ["derive"] }
serde_json 			= "1.0.73"
anyhow 				= "1.0.33"
derive_more 		= "0.99.11"
lazy_static 		= "1.4.0"
bson = "2.6.1"
futures 			= "0.3.6"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 